# cpfm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fileviewwidget.cpp  fileviewwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtfm
qtfm_autogen/: moc_predefs.h  mocs_compilation.cpp
qtfm_autogen/EWIEGA46WW/: moc_fileviewwidget.cpp  moc_mainwindow.cpp
qtfm_autogen/KUU2EYYIIR/: moc_mimetype.cpp
qtfm_autogen/include/: ui_mainwindow.h
sidebar/widgets/: mimetype.cpp  mimetype.h  widgets.cpp.autosave
